feat: verfier and server
