# restapi/doc.go
@@ -1,11 +1,11 @@
 // Code generated by go-swagger; DO NOT EDIT.
 
-// Package restapi Blob Hub Service API
+// Package restapi Greenfield BSC Archiver Service API
 //
-//	API for handling blob query in the Blob Hub.
+//	API for handling block query in the Greenfield BSC Archiver.
 //	Schemes:
 //	  http
-//	Host: blob-hub
+//	Host: greenfield-bsc-archiver
 //	BasePath: /
 //	Version: 1.0.0
 //
