# types/key.go
@@ -8,26 +8,26 @@ import (
 
 const RootLength = 32
 
-func GetBlobName(slot uint64, index int) string {
-	return fmt.Sprintf("blob_h%d_i%d", slot, index)
+func GetBlockName(block uint64) string {
+	return fmt.Sprintf("block_h%d", block)
 }
 
-func GetBundleName(startSlot, endSlot uint64) string {
-	return fmt.Sprintf("blobs_s%d_e%d", startSlot, endSlot)
+func GetBundleName(startBlock, endBlock uint64) string {
+	return fmt.Sprintf("blocks_s%d_e%d", startBlock, endBlock)
 }
 
-func ParseBlobName(blobName string) (slot uint64, index uint64, err error) {
-	parts := strings.Split(blobName, "_")
-	slot, err = strconv.ParseUint(parts[1][1:], 10, 64)
-	if err != nil {
-		return
-	}
-	index, err = strconv.ParseUint(parts[2][1:], 10, 64)
-	if err != nil {
-		return
-	}
-	return
-}
+//func ParseBlobName(blobName string) (slot uint64, index uint64, err error) {
+//	parts := strings.Split(blobName, "_")
+//	slot, err = strconv.ParseUint(parts[1][1:], 10, 64)
+//	if err != nil {
+//		return
+//	}
+//	index, err = strconv.ParseUint(parts[2][1:], 10, 64)
+//	if err != nil {
+//		return
+//	}
+//	return
+//}
 
 func ParseBundleName(bundleName string) (startBlock, endBlock uint64, err error) {
 	parts := strings.Split(bundleName, "_")
